// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectAttribute.vue Date mode 1`] = `
<div>
  <hr title="1577836800000">
</div>
`;

exports[`ObjectAttribute.vue Does not mutate original component wrapper: 1 wrapper.html() 1`] = `
<div title="[object Object]">
  <h1 title="asdf,qwer" class="active">
    text
  </h1>
  <hr title="text,22">
  <hr>
  <hr title="true">
  <hr title="Invalid Date">
  <hr title="Error: err">
  <hr title="Infinity">
  <hr title="-Infinity">
  <hr title="NaN">
  <hr>
  <hr title="75">
  <hr title="[object Object]">
  <hr title="[object Set]">
  <hr title="Text">
  <hr title="function String() { [native code] }">
  <hr>
  <hr title="Text
Text">
</div>
`;

exports[`ObjectAttribute.vue Does not mutate original component wrapper: 2 wrapper 1`] = `
<div title="{a:true,b:'Some \\'text\\'',c:{d:{e:'23'},f:'\\'&quot;\\'&quot;'}}">
  <h1 title="['asdf','qwer']" class="active">
    text
  </h1>
  <hr title="['text',22]">
  <hr title="false">
  <hr title="true">
  <hr title="Invalid Date">
  <hr title="Error: err">
  <hr title="Infinity">
  <hr title="-Infinity">
  <hr title="NaN">
  <hr title="null">
  <hr title="75">
  <hr title="{a:{c:true},b:{d:'text'}}">
  <hr title="['a','b','c']">
  <hr title="Text">
  <hr title="Function">
  <hr title="undefined">
  <hr title="Text
Text">
</div>
`;

exports[`ObjectAttribute.vue Does not mutate original component wrapper: 3 wrapper.html() 1`] = `
<div title="[object Object]">
  <h1 title="asdf,qwer" class="active">
    text
  </h1>
  <hr title="text,22">
  <hr>
  <hr title="true">
  <hr title="Invalid Date">
  <hr title="Error: err">
  <hr title="Infinity">
  <hr title="-Infinity">
  <hr title="NaN">
  <hr>
  <hr title="75">
  <hr title="[object Object]">
  <hr title="[object Set]">
  <hr title="Text">
  <hr title="function String() { [native code] }">
  <hr>
  <hr title="Text
Text">
</div>
`;

exports[`ObjectAttribute.vue Does not mutate original component wrapper: 4 wrapper 1`] = `
<div title="{a:true,b:'Some \\'text\\'',c:{d:{e:'23'},f:'\\'&quot;\\'&quot;'}}">
  <h1 title="['asdf','qwer']" class="active">
    text
  </h1>
  <hr title="['text',22]">
  <hr title="false">
  <hr title="true">
  <hr title="Invalid Date">
  <hr title="Error: err">
  <hr title="Infinity">
  <hr title="-Infinity">
  <hr title="NaN">
  <hr title="null">
  <hr title="75">
  <hr title="{a:{c:true},b:{d:'text'}}">
  <hr title="['a','b','c']">
  <hr title="Text">
  <hr title="Function">
  <hr title="undefined">
  <hr title="Text
Text">
</div>
`;
